@@ -79,6 +79,8 @@ dependencies {
     implementation 'org.ow2.asm:asm-commons:9.10.1'
     implementation 'org.ow2.asm:asm-tree:9.10.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-json-okio-jvm:1.9.0'
+    implementation 'org.jetbrains.kotlinx:kotlinx-serialization-protobuf-jvm:1.9.0'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core-jvm:1.10.2'
     implementation 'com.squareup.okhttp3:okhttp:5.4.0'
     implementation 'com.squareup.okhttp3:okhttp-brotli:5.4.0'
@@ -91,7 +93,10 @@ dependencies {
 application {
     mainModule = 'fr.vriege.anilib.platform.desktopextensionhost'
     mainClass = 'fr.vriege.anilib.platform.desktopextensionhost.DesktopExtensionHostMain'
-    applicationDefaultJvmArgs = ['--add-modules=ALL-MODULE-PATH']
+    applicationDefaultJvmArgs = [
+            '--add-modules=ALL-MODULE-PATH',
+            '--add-exports=kotlinx.serialization.json/kotlinx.serialization.json.internal=ALL-UNNAMED'
+    ]
 }
 
 tasks.register('desktopExtensionHostSmoke', JavaExec) {
